added toggle and trial  background image

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,18 @@
   <body>
     <h1>The background-image Property</h1>
     <p>Hello World!</p>
+    
+    <h2>Background Image</h2>
+    <p>By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
+
+    <h2>Toggle Switch</h2>
+    <p>Data visualisation layer </p>
+
+
+    <label class="switch">
+      <input type="checkbox" checked>
+      <span class="slider round"></span>
+    </label>
   </body>
 </html>
 
