reflecting feedbac - fix white space, capitalisation, sidebar width to reflect comment exactly, pom naming and pom project id

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- Sidebar -->
     <div class="sidenav">
+      <!-- The top "nav" in the sidebar -->
       <div class="topnav"> 
         <div class="search-container">
           <form action="/action_page.php">
@@ -16,9 +17,7 @@
             <button type="submit" class="button Search" id="submit">Search</button>
           </form>
         </div>
-        <button class="button Search">Search</button>
-        <!-- trying button class vs id -->
-        <button id="Directions">Directions</button> 
+        <button class="button directions" id="directions">Directions</button> 
       </div> 
     </div>
 
@@ -29,7 +28,7 @@
       
       <div class="switch_div">
         <h3>Data visualisation layer - Toggle Switch </h3>
-        <label id="Switch" class="switch">
+        <label id="switch" class="switch">
         <label class="switch">
           <input type="checkbox" checked>
           <span class="slider round"></span>
