fixed sidebar width, buttons to be of same styling, data visual switch to be float on RHS

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,13 +28,12 @@
       
       <div class="switch_div">
         <h3>Data visualisation layer - Toggle Switch </h3>
+        <p>This div element is on float:right, and its width is 300px. </p>
         <label id="switch" class="switch">
         <label class="switch">
           <input type="checkbox" checked>
           <span class="slider round"></span>
         </label>
-        <br><br>
-        <p>This div element has position: absolute and is placed 150 pixels to the left of the right edge of the containing positioned element aka the body.</p>
       </div>
     </div>
     
