Add fake functionality for search term "wagga wagga"

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
         <button class="button directions" id="directions" onClick="showRoutes()">Directions</button> 
         <button class="button directiones" id="close-directions" onClick="hideRoutes()">Close directions</button>
       </div> 
+      <div id="location-info"></div>
     </div>
     <div class="main">
       <h1>Prototype Layout for Air Quality Map</h1>
@@ -40,5 +41,6 @@
         - Time: 4hr 30min <br>
         - AQ score: 30 (Excellent) </p>
     </div>
+    <div id="demo"></div>
   </body>
 </html>
