Change from using 'sidenav' class to 'sidebar' id for css, remove now obsolete 'sidenav' class

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Sidebar -->
-    <div class="sidenav" id="sidebar">
+    <div id="sidebar">
       <!-- The top "nav" in the sidebar -->
       <div class="topnav"> 
         <div class="search-container">
