Minor changes in response to feedback

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Air Quality Map</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/script.js"></script>
   </head>
   <body>
     <!-- Sidebar -->
