--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,8 +5,12 @@
     <title>Air Quality Map</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
+    <script defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwXfHdwfNsdIYmwRfViMkPMPfxNUXOzCQ&callback=initMap">
+    </script>
   </head>
   <body>
+    <div id="map"></div>
     <!-- Sidebar -->
     <div id="sidebar">
       <!-- The top "nav" in the sidebar -->
