--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
   <script defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwXfHdwfNsdIYmwRfViMkPMPfxNUXOzCQ&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwXfHdwfNsdIYmwRfViMkPMPfxNUXOzCQ&libraries=visualization&callback=initMap">
     </script>
 </head>
 
