Change collapse/expand icon buttons to have arrow icons

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,9 @@
   <script src="/script.js"></script>
   <script defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwXfHdwfNsdIYmwRfViMkPMPfxNUXOzCQ&libraries=visualization&callback=initMap">
-    </script>
+  </script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
