Condense open & close sidebar buttons into one button

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,8 +29,7 @@
       
       <div id="location-info"></div>
     </div>
-    <button id="close-sidebar" onClick="closeSidebar()">close sidebar</button>
-    <button id="open-sidebar" onClick="openSidebar()">open sidebar</button>
+    <button id="toggle-sidebar" onClick="toggleSidebar()">close sidebar</button>
   </div>
 </body>
 
