Change toggle sidebar button to use arrow icons

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@
       
       <div id="location-info"></div>
     </div>
-    <button id="toggle-sidebar" onClick="toggleSidebar()">close sidebar</button>
+    <button id="toggle-sidebar" onClick="toggleSidebar()"><i class=material-icons>navigate_before</i></button>
   </div>
 </body>
 
