Include places api

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
   <script defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwXfHdwfNsdIYmwRfViMkPMPfxNUXOzCQ&libraries=visualization&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwXfHdwfNsdIYmwRfViMkPMPfxNUXOzCQ&libraries=visualization,places&callback=initMap">
   </script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
