--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,33 +24,28 @@
       <div id="floating-panel">
         <strong>Start:</strong>
         <select id="start">
-          <option value="chicago, il">Chicago</option>
-          <option value="st louis, mo">St Louis</option>
-          <option value="joplin, mo">Joplin, MO</option>
-          <option value="oklahoma city, ok">Oklahoma City</option>
-          <option value="amarillo, tx">Amarillo</option>
-          <option value="gallup, nm">Gallup, NM</option>
-          <option value="flagstaff, az">Flagstaff, AZ</option>
-          <option value="winona, az">Winona</option>
+          <option value="Sydney">Sydney</option>
+          <option value="Canberra">Canberra</option>
+          <option value="Wollongong">Wollongong</option>
+          <option value="Newcastle">Newcastle</option>
+          <option value="Burwood">Burwood</option> 
+          <option value="Townhall, Sydney">Townhall, Sydney</option>
+          <option value="QVB">QVB</option>
           <option value="kingman, az">Kingman</option>
-          <option value="barstow, ca">Barstow</option>
-          <option value="san bernardino, ca">San Bernardino</option>
           <option value="los angeles, ca">Los Angeles</option>
         </select>
         <br />
         <strong>End:</strong>
         <select id="end">
-          <option value="chicago, il">Chicago</option>
-          <option value="st louis, mo">St Louis</option>
-          <option value="joplin, mo">Joplin, MO</option>
-          <option value="oklahoma city, ok">Oklahoma City</option>
-          <option value="amarillo, tx">Amarillo</option>
-          <option value="gallup, nm">Gallup, NM</option>
-          <option value="flagstaff, az">Flagstaff, AZ</option>
-          <option value="winona, az">Winona</option>
+          <option value="Sydney">Sydney</option>
+          <option value="Canberra">Canberra</option>
+          <option value="Wollongong">Wollongong</option>
+          <option value="Newcastle">Newcastle</option>
+          <option value="Carlton">Carlton</option>
+          <option value="Burwood, Melbourne">Burwood</option> <!-- if no specification, it went to burwood sydney -->
+          <option value="Townhall, Sydney">Townhall, Sydney</option>
+          <option value="QVB">QVB</option>
           <option value="kingman, az">Kingman</option>
-          <option value="barstow, ca">Barstow</option>
-          <option value="san bernardino, ca">San Bernardino</option>
           <option value="los angeles, ca">Los Angeles</option>
         </select>
       </div>
