changed index to reflect change, progress in script

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,6 +55,14 @@
           <input type="text" placeholder="Search a location..." name="search" id="location-search-bar" alt="Search location">
           <button class="button Search" id="location-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
         </div>
+        <div class="origin-container">
+          <input type="text" placeholder="Input Origin..." name="origin" id="origin-search-bar" alt="origin location">
+          <button class="button Search" id="Origin-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
+        </div>
+        <div class="destination-container">
+          <input type="text" placeholder="Input destination..." name="search" id="destination-search-bar" alt="destination location">
+          <button class="button Search" id="destination-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
+        </div>
         <div id="feature-buttons-container" class="flex-container">
           <button class="feature-button" id="clean-air-button" alt="Find rest stops with clean air near this location">Clean air near here</button>
           <button class="feature-button" id="directions" onClick="showRoutes()" alt="Plan a route to this location">Plan route</button>
