changing it to a class, refactoring in progress

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,11 +55,11 @@
           <input type="text" placeholder="Search a location..." name="search" id="location-search-bar" alt="Search location">
           <button class="button Search" id="location-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
         </div>
-        <div class="origin-container">
+        <div class="search-container">
           <input type="text" placeholder="Input Origin..." name="origin" id="origin-search-bar" alt="origin location">
           <button class="button Search" id="Origin-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
         </div>
-        <div class="destination-container">
+        <div class="search-container">
           <input type="text" placeholder="Input destination..." name="search" id="destination-search-bar" alt="destination location">
           <button class="button Search" id="destination-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
         </div>
