finished refactoring function into class, ready to test

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,6 +68,21 @@
           <button class="feature-button" id="directions" onClick="showRoutes()" alt="Plan a route to this location">Plan route</button>
           <button class="feature-button" id="close-directions" onClick="hideRoutes()">Close directions</button>
         </div>
+        <div id="mode-selector" class="controls">
+          <input
+            type="radio"
+            name="type"
+            id="changemode-walking"
+            checked="checked"
+          />
+          <label for="changemode-walking">Walking</label>
+  
+          <input type="radio" name="type" id="changemode-transit" />
+          <label for="changemode-transit">Transit</label>
+  
+          <input type="radio" name="type" id="changemode-driving" />
+          <label for="changemode-driving">Driving</label>
+        </div>
       </div>
       
       <div id="location-info"></div>
