input box disappearance unsolved after change

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="search-container">
           <input type="text" placeholder="Input Origin..." name="origin" id="origin-search-bar" alt="origin location">
-          <button class="button Search" id="Origin-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
+          <button class="button Search" id="origin-search-button" onClick="searchLocation()"><i class="material-icons">search</i></button>
         </div>
         <div class="search-container">
           <input type="text" placeholder="Input destination..." name="search" id="destination-search-bar" alt="destination location">
