working autocomplete, search, display route and directions

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,13 +33,13 @@
           <button class="feature-button" id="close-directions" onClick="hideRoutes()">Close directions</button>
         </div>
         <div id="mode-selector" class="userInput">
-          <input type="radio" name="type" id="changemode-walking" checked="checked"/>
+          <input type="radio" name="type" id="changemode-walking"/>
           <label for="changemode-walking">Walking</label>
   
-          <input type="radio" name="type" id="changemode-transit" />
+          <input type="radio" name="type" id="changemode-transit"/>
           <label for="changemode-transit">Transit</label>
   
-          <input type="radio" name="type" id="changemode-driving" />
+          <input type="radio" name="type" id="changemode-driving" checked="checked"/>
           <label for="changemode-driving">Driving</label>
         </div>
       </div>
