Add markers for clean air near here feature

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
           <input id="destination-input" class="userInput" type="text" placeholder="Enter a destination location"/>
         </div>
         <div id="feature-buttons-container" class="flex-container">
-          <button class="feature-button" id="clean-air-button" alt="Find rest stops with clean air near this location">Clean air near here</button>
+          <button class="feature-button" id="clean-air-button" alt="Find rest stops with clean air near this location" onClick="createCleanAirMarkers()">Clean air near here</button>
         </div>
         <div id="mode-selector" class="userInput">
           <input type="radio" name="type" id="changemode-walking"/>
