sucessful dropdown waypoint route scoring

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,6 +29,28 @@
           <input id="origin-input" class="userInput" type="text" placeholder="Enter an origin location"/>
           <input id="destination-input" class="userInput" type="text" placeholder="Enter a destination location"/>
         </div>
+        <div>
+          <b> Waypoints: </b> 
+          <br>
+          <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> 
+          <br>
+          <!-- The top "nav" in the sidebar -->
+          <select multiple id="waypoints"> 
+            <option value="Sydney">Sydney</option>
+            <option value="Canberra">Canberra</option>
+            <option value="Wollongong">Wollongong</option>
+            <option value="Australian Museum">Australian Museum</option> 
+            <option value="Townhall, Sydney">Townhall, Sydney</option>
+            <option value="QVB">QVB</option>
+            <option value="Yi Jia Supermarket">Yi Jia Supermarket</option>
+            <option value="Martin Place Station">Martin Place Station</option>
+            <option value="Kembla Grange Station">Kembla Grange Station</option>
+            <option value="TAFE NSW - Lidcombe">TAFE NSW - Lidcombe</option>
+            <option value="The University of Sydney - Cumberland Campus">USYD, Cumberland Campus</option>
+            <option value="Macquarie Uni Football Club">Macquarie Uni Football Club</option>
+          </select>
+          <br />
+        </div>
         <div id="feature-buttons-container" class="flex-container">
           <button class="feature-button" id="clean-air-button" alt="Find rest stops with clean air near this location">Clean air near here</button>
         </div>
