--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,6 +52,7 @@
           <br />
         </div>
         <div id="feature-buttons-container" class="flex-container">
+          <button class="waypoint-button" id="waypoint-button" alt="Add Waypoints to route">Add Waypoints</button>
           <button class="feature-button" id="clean-air-button" alt="Find rest stops with clean air near this location">Clean air near here</button>
         </div>
         <div id="mode-selector" class="userInput">
