Waypoint sucessfull working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,12 +29,12 @@
           <input id="origin-input" class="userInput" type="text" placeholder="Enter an origin location"/>
           <input id="destination-input" class="userInput" type="text" placeholder="Enter a destination location"/>
         </div>
+        <!--
         <div>
           <b> Waypoints: </b> 
           <br>
           <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> 
           <br>
-          <!-- The top "nav" in the sidebar -->
           <select multiple id="waypoints"> 
             <option value="Sydney">Sydney</option>
             <option value="Canberra">Canberra</option>
@@ -50,6 +50,8 @@
             <option value="Macquarie Uni Football Club">Macquarie Uni Football Club</option>
           </select>
           <br />
+        </div> -->
+        <div id="waypoint-container">
         </div>
         <div id="feature-buttons-container" class="flex-container">
           <button class="waypoint-button" id="waypoint-button" alt="Add Waypoints to route">Add Waypoints</button>
