clean up code, add waypoint note, delete some print, commit after master merge

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,9 @@
           <input type="radio" name="type" id="changemode-driving" checked="checked"/>
           <label for="changemode-driving">Driving</label>
         </div>
+        <div id="waypoint-note">
+          <i> Please note Google Maps API does not support Waypoints on transit mode. </i>
+        </div>
       </div>
       <div id="location-info"></div>
       <div id="direction-panel"></div>
